--- a/src/pages/Home/Mint/bonustable.module.scss
+++ b/src/pages/Home/Mint/bonustable.module.scss
@@ -6,13 +6,13 @@ table.bonusTable {
 
     width: 100%;
     height: 100%;
-    margin-top:  20px;
-    display: inline-block; 
-    overflow: auto; 
+    margin-top: 20px;
+    display: inline-block;
+    overflow: auto;
 
-    th div { 
-        margin-top: -20px; 
-        position: fixed; 
+    th div {
+        margin-top: -20px;
+        position: fixed;
     }
 
     td {
@@ -22,6 +22,9 @@ table.bonusTable {
         }
     }
 
+    .clickable:hover {
+        cursor: pointer;
+    }
 
     .highlighted {
         background-color: rgba($primary, 0.3) !important;
