--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -296,5 +296,9 @@
             padding: 15px;
             backdrop-filter: none;
         }
+
+        .emptyPenguin {
+            margin-top: 150px;
+        }
     }
 }
