RETAKE warning position to don't move button + ADD grey button if can't increment

--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -222,8 +222,12 @@
                             height: 100%;
                             text-align: center;
 
-                            &:hover {
+                            &:hover:not(.disabled) {
                                 background-color: #c6d7f6;
+                            }
+
+                            &.disabled {
+                                color: grey;
                             }
                         }
 
