--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -228,6 +228,7 @@
 
                             &.disabled {
                                 color: grey;
+                                cursor: default;
                             }
                         }
 
