--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -3,6 +3,7 @@
 :root {
     --border-margin: 30px;
 }
+
 @mixin customScrollbar {
     padding-bottom: 10px;
 
@@ -85,9 +86,11 @@
 
         img {
             height: 360vh;
+
             &.mobile {
                 display: none;
             }
+
             &.desktop {
                 display: block;
             }
@@ -182,7 +185,7 @@
 
             > .content {
                 display: grid;
-                grid-template-areas: "title" "advantages" "mint";
+                grid-template-areas: "title""advantages""mint";
                 justify-items: start;
                 align-items: center;
                 max-width: 700px;
@@ -318,7 +321,7 @@
             .connectWallet {
                 padding-left: 80px;
                 padding-right: 80px;
-                
+
                 &.danger {
                     background-color: #c23737;
 
@@ -419,7 +422,9 @@
         overflow: hidden;
 
         display: grid;
-        grid-template-areas: "title card" "slider slider";
+        grid-template-areas:
+            "title card"
+            "slider slider";
 
         > .title {
             margin-left: auto;
@@ -469,10 +474,12 @@
                             width: 70px;
                             transform: rotate(-20deg);
                         }
+
                         &.wallet {
                             width: 90px;
                             transform: rotate(3deg);
                         }
+
                         &.gift {
                             width: 60px;
                             transform: rotate(6deg);
@@ -607,6 +614,7 @@
                     transform: rotate(-7deg);
                 }
             }
+
             > .card {
                 width: 40%;
             }
@@ -699,7 +707,12 @@
     #ourCommunity {
         position: relative;
         display: grid;
-        grid-template-areas: "preTitle" "h3" "bigTitle" "discord" "weCreateChannel";
+        grid-template-areas:
+            "preTitle"
+            "h3"
+            "bigTitle"
+            "discord"
+            "weCreateChannel";
 
         #deco_3 {
             width: 388px;
@@ -771,7 +784,9 @@
             grid-area: weCreateChannel;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-areas: "left right" "info right";
+            grid-template-areas:
+                "left right"
+                "info right";
             grid-gap: 1rem 100px;
             margin-bottom: 260px;
 
@@ -848,6 +863,7 @@
 
             > .right {
                 grid-area: right;
+
                 img {
                     max-width: 90vw;
                 }
@@ -961,6 +977,7 @@
                 top: 162px;
                 opacity: 0.2;
             }
+
             #deco_6 {
                 width: 433px;
                 right: -433px;
@@ -968,6 +985,7 @@
                 opacity: 0.8;
                 transform: rotate(270deg);
             }
+
             #deco_7 {
                 width: 820px;
                 right: -601px;
@@ -975,6 +993,7 @@
                 opacity: 0.4;
                 transform: rotate(275deg);
             }
+
             #deco_8 {
                 transform: rotate(335deg);
                 width: 308px;
@@ -1004,27 +1023,33 @@
                             border-radius: 50%;
                         }
                     }
+
                     &.wallet {
                         width: 80%;
                         bottom: calc(100% - 95px);
                         left: 8%;
                     }
+
                     &.airdrop {
                         width: 90%;
                         bottom: calc(100% - 90px);
                         left: 7%;
                     }
+
                     &.early {
                         perspective: 270px;
                         width: 96%;
                         bottom: calc(100% - 75px);
                         right: 4%;
+
                         img {
                             transform: rotateY(351deg);
                         }
                     }
+
                     &.community {
                         bottom: calc(100% - 65px);
+
                         img {
                             border-radius: 50%;
                             aspect-ratio: 1 / 1;
@@ -1109,6 +1134,7 @@
                     margin-bottom: 1rem;
                     font-size: 1.8rem;
                 }
+
                 > p {
                     font-size: 1.8rem;
                     font-weight: lighter;
@@ -1142,6 +1168,7 @@
                     z-index: 3;
                     transform: rotate(320deg);
                 }
+
                 #deco_11 {
                     width: 537px;
                     left: -386px;
@@ -1150,6 +1177,7 @@
                     transform: rotate(90deg);
                     z-index: 3;
                 }
+
                 #deco_12 {
                     width: 715px;
                     right: -500px;
@@ -1158,6 +1186,7 @@
                     transform: rotate(90deg);
                     z-index: 3;
                 }
+
                 #deco_13 {
                     width: 581px;
                     right: -487px;
@@ -1215,12 +1244,15 @@
                 &.develop {
                     grid-area: develop;
                 }
+
                 &.identity {
                     grid-area: identity;
                 }
+
                 &.educate {
                     grid-area: educate;
                 }
+
                 &.influence {
                     grid-area: influence;
                 }
@@ -1701,12 +1733,14 @@
                     left: -34vh;
                     top: -50vh;
                 }
+
                 &#deco_2 {
                     left: 97vh;
                     width: 80vh;
                     top: -33vh;
                     z-index: 1;
                 }
+
                 &#deco_3 {
                     left: 153vh;
                     width: 65vh;
@@ -1714,6 +1748,7 @@
                     z-index: 0;
                     transform: rotate(228deg);
                 }
+
                 &#deco_4 {
                     left: 172vh;
                     width: 84vh;
@@ -1721,6 +1756,7 @@
                     z-index: 0;
                     transform: rotate(16deg);
                 }
+
                 &#deco_5 {
                     left: 371vh;
                     width: 55vh;
@@ -1728,6 +1764,7 @@
                     z-index: 0;
                     transform: rotate(235deg);
                 }
+
                 &#deco_6 {
                     display: none;
                     left: 430vh;
@@ -1736,18 +1773,21 @@
                     z-index: 0;
                     transform: rotate(12deg);
                 }
+
                 &#deco_7 {
                     left: -18vh;
                     width: 71vh;
                     top: -18vh;
                     z-index: 0;
                 }
+
                 &#deco_8 {
                     left: 30vh;
                     width: 29vh;
                     top: -10vh;
                     z-index: 0;
                 }
+
                 &#deco_9 {
                     left: 104vh;
                     width: 54vh;
@@ -1755,6 +1795,7 @@
                     z-index: 0;
                     transform: rotate(40deg);
                 }
+
                 &#deco_10 {
                     left: 170vh;
                     width: 81vh;
@@ -1762,12 +1803,14 @@
                     z-index: 0;
                     transform: rotate(292deg);
                 }
+
                 &#deco_11 {
                     left: 262vh;
                     width: 81vh;
                     top: -16vh;
                     z-index: 0;
                 }
+
                 &#deco_12 {
                     left: 384vh;
                     width: 58vh;
@@ -1775,6 +1818,7 @@
                     z-index: 0;
                     transform: rotate(310deg);
                 }
+
                 &#deco_13 {
                     left: 419vh;
                     width: 35vh;
@@ -1782,6 +1826,7 @@
                     z-index: 0;
                     transform: rotate(25deg);
                 }
+
                 &#deco_14 {
                     display: none;
                     left: 422vh;
@@ -1810,12 +1855,14 @@
             left: -341px;
             transform: rotate(44deg);
         }
+
         #deco_15 {
             width: 477px;
             top: 272px;
             left: -426px;
             transform: rotate(330deg);
         }
+
         #deco_16 {
             width: 546px;
             top: 70px;
@@ -1838,18 +1885,23 @@
                     margin: auto;
                     max-width: 240px;
                 }
+
                 .boss {
                     grid-area: boss;
                 }
+
                 .fargerik {
                     grid-area: fargerik;
                 }
+
                 .skipper {
                     grid-area: skipper;
                 }
+
                 .seymour {
                     grid-area: seymour;
                 }
+
                 .rico {
                     grid-area: rico;
                 }
@@ -1965,7 +2017,9 @@
 
             .right {
                 > .content {
-                    grid-template-areas: "mint" "advantages";
+                    grid-template-areas:
+                        "mint"
+                        "advantages";
 
                     > h1 {
                         display: none;
@@ -1998,7 +2052,10 @@
         }
 
         #ourMarketplace {
-            grid-template-areas: "title" "slider" "card";
+            grid-template-areas:
+                "title"
+                "slider"
+                "card";
 
             > .title {
                 margin-left: var(--border-margin);
@@ -2006,6 +2063,7 @@
 
             > .slider {
                 top: 36vh;
+
                 > .frontPenguin {
                     bottom: 36.7vh;
                     text-align: center;
@@ -2057,6 +2115,7 @@
 
         #technologicalInputs {
             flex-direction: column;
+
             > .left {
                 > h2 {
                     text-align: center;
@@ -2099,7 +2158,10 @@
         #ourCommunity {
             > .weCreateChannel {
                 grid-template-columns: repeat(1, 1fr);
-                grid-template-areas: "left" "right" "info";
+                grid-template-areas:
+                    "left"
+                    "right"
+                    "info";
             }
         }
 
@@ -2190,6 +2252,7 @@
         h2 {
             font-size: 3rem;
         }
+
         #mint {
             > .right {
                 padding: 15px;
@@ -2207,10 +2270,12 @@
             &.time {
                 padding: 10px 25px;
                 gap: 20px;
+
                 > div {
                     > .time {
                         font-size: 2rem;
                     }
+
                     > .label {
                         font-size: 1rem;
                     }
@@ -2238,6 +2303,7 @@
                     flex-direction: column;
                     align-items: center;
                 }
+
                 > .bottom {
                     overflow: auto;
 
@@ -2255,7 +2321,12 @@
 
         #ourCommunity {
             padding: 0;
-            grid-template-areas: "h3" "preTitle" "bigTitle" "discord" "weCreateChannel";
+            grid-template-areas:
+                "h3"
+                "preTitle"
+                "bigTitle"
+                "discord"
+                "weCreateChannel";
 
             > div {
                 padding-right: 15px;
@@ -2319,6 +2390,7 @@
             > h3 {
                 font-size: 1.4rem;
             }
+
             > p {
                 font-size: 1.3rem;
             }
@@ -2346,38 +2418,49 @@
                 .text_1 {
                     top: 37vh;
                 }
+
                 .text_2 {
                     top: 80vh;
                 }
+
                 .text_3 {
                     top: 28.5vh;
                 }
+
                 .text_4 {
                     top: 80vh;
                     max-width: 244px;
                     left: calc(96vh + 16vh - 244px / 2);
                 }
+
                 .text_5 {
                     top: 44vh;
                 }
+
                 .text_10 {
                     top: 58vh;
                 }
+
                 .text_14 {
                     top: 83vh;
                 }
+
                 .text_15 {
                     top: 42vh;
                 }
+
                 .img_coin_4 {
                     top: 67.1vh;
                 }
+
                 .img_coin_3 {
                     top: 30.5vh;
                 }
+
                 .img_coin_2 {
                     top: 65vh;
                 }
+
                 .publicSale {
                     top: 36vh;
                 }
@@ -2416,6 +2499,7 @@
                 &.mobile {
                     display: block;
                 }
+
                 &.desktop {
                     display: none;
                 }
@@ -2425,6 +2509,7 @@
         #pinguinOnIceberg {
             top: 74.6vh;
             left: calc(50vw - 20vh);
+
             img {
                 height: 15vh;
             }
