--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -185,7 +185,10 @@
 
             > .content {
                 display: grid;
-                grid-template-areas: "title""advantages""mint";
+                grid-template-areas:
+                    "title"
+                    "advantages"
+                    "mint";
                 justify-items: start;
                 align-items: center;
                 max-width: 700px;
