ADD toggle LKMex

--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -101,6 +101,10 @@
         }
     }
 
+    p.discount-disabled {
+        font-weight: normal;
+    }
+
     > .right {
         background-color: #00000063;
         backdrop-filter: blur(24px) contrast(1.4);
