--- a/src/pages/hatching/rarityInfos.module.scss
+++ b/src/pages/hatching/rarityInfos.module.scss
@@ -2,7 +2,7 @@
 
 .rarityInfos {
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 0;
     left: 0;
