--- a/src/pages/hatching/HatchingHome/hatchingHome.scss
+++ b/src/pages/hatching/HatchingHome/hatchingHome.scss
@@ -52,6 +52,8 @@
 }
 
 #hatchingHome {
+    overflow-x: hidden;
+
     #hatchingHero {
         z-index: -1;
         position: absolute;
@@ -95,6 +97,10 @@
                 height: 20vh;
                 position: relative;
                 z-index: -1;
+                max-width: 100vw;
+                display: inline-flex;
+                flex-direction: column;
+                align-items: center;
 
                 img {
                     position: relative;
@@ -118,6 +124,7 @@
 
     #penguinNest {
         margin-bottom: 100px;
+        padding: 0 15px;
 
         > h2 {
             font-family: 'CHEDROS', sans-serif;
@@ -126,6 +133,45 @@
             color: $white;
             text-align: center;
             margin-bottom: 2rem;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    #hatchingHome #topPage > .howTo {
+        position: relative;
+        bottom: 0;
+        margin-top: 28vh;
+    }
+}
+
+@media (max-width: 768px) {
+
+    #hatchingHome {
+        #topPage {
+            > .reveal {
+                > h1 {
+                    font-size: 3rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 400px) {
+
+    #hatchingHome {
+        #topPage {
+            > .reveal {
+                > h1 {
+                    font-size: 2rem;
+                }
+
+                > .button {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                }
+            }
         }
     }
 }
