RETAKE disconnect outline style + RETAKE replace routing to hatchingSelection by a hash link

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -278,6 +278,7 @@ button,
 
     &.danger {
       border-color: $danger;
+      color: $danger;
 
       &:hover {
         background-color: $danger;
