--- a/src/pages/hatching/hatchingCard.module.scss
+++ b/src/pages/hatching/hatchingCard.module.scss
@@ -67,18 +67,19 @@
         max-height: 60vh;
 
         &::after {
-            content: '';
+            content: "";
             pointer-events: none;
             position: absolute;
             bottom: 0;
             left: -15px;
             right: 0;
             height: 80px;
-            background: transparent linear-gradient(180deg, #000B2700 0%, #000b2717 30%, #000b2773 100%) 0% 0% no-repeat padding-box;
+            background: transparent linear-gradient(180deg, #000b2700 0%, #000b2717 30%, #000b2773 100%) 0% 0% no-repeat
+                padding-box;
         }
 
         > h3 {
-            font-family: 'CHEDROS', sans-serif;
+            font-family: "CHEDROS", sans-serif;
             font-size: 2rem;
             font-weight: bold;
             color: $primary;
@@ -100,7 +101,7 @@
                 margin: 3px;
 
                 &:hover {
-                    background-color: #EBEBEB;
+                    background-color: #ebebeb;
                 }
 
                 &.selected {
@@ -123,7 +124,7 @@
         min-height: 100%;
 
         > h3 {
-            font-family: 'CHEDROS', sans-serif;
+            font-family: "CHEDROS", sans-serif;
             font-size: 2rem;
             font-weight: bold;
             color: $primary;
@@ -145,14 +146,14 @@
             }
 
             > h4 {
-                font-family: 'CHEDROS', sans-serif;
+                font-family: "CHEDROS", sans-serif;
                 font-size: 1.5rem;
                 font-weight: bold;
                 color: $dark;
             }
 
             > p {
-                font-family: 'Montserrat', sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-size: 1.2rem;
                 max-width: 70%;
                 text-align: center;
@@ -185,14 +186,14 @@
             position: absolute;
             inset: 0;
             right: -15px;
-            background-color: #242424DE;
+            background-color: #242424de;
             display: flex;
             flex-direction: column;
             justify-content: center;
             gap: 36px;
 
             > p {
-                font-family: 'CHEDROS', sans-serif;
+                font-family: "CHEDROS", sans-serif;
                 font-size: 70px;
                 font-weight: bold;
                 color: $white;
@@ -223,13 +224,14 @@
             height: 80px;
 
             &::before {
-                content: '';
+                content: "";
                 position: absolute;
                 bottom: 0;
                 left: 0;
                 right: -20px;
                 height: 100%;
-                background: transparent linear-gradient(180deg, #000B2700 0%, #000b2717 30%, #000b2773 100%) 0% 0% no-repeat padding-box;
+                background: transparent linear-gradient(180deg, #000b2700 0%, #000b2717 30%, #000b2773 100%) 0% 0%
+                    no-repeat padding-box;
                 z-index: 0;
             }
 
@@ -237,14 +239,13 @@
                 z-index: 0;
                 min-width: 30%;
             }
-
         }
     }
 
     &.bySelection {
         > .yourInventory {
             > .subTitle {
-                font-family: 'Montserrat', sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-size: 1.2rem;
                 color: $dark;
             }
@@ -259,7 +260,7 @@
         z-index: 80;
         position: fixed;
         inset: 0;
-        background-color: #242424DE;
+        background-color: #242424de;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -269,10 +270,11 @@
             align-items: center;
             justify-content: center;
             aspect-ratio: 1 / 1;
+            position: relative;
 
             height: 80%;
 
-            @media (max-aspect-ratio: '1/1') {
+            @media (max-aspect-ratio: "1/1") {
                 width: 80%;
                 height: auto;
             }
@@ -285,7 +287,20 @@
                 width: 100%;
             }
 
-            > .loader {}
+            .skipVideo {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                padding: 20px;
+                font-weight: bold;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            > .loader {
+            }
         }
     }
 
@@ -300,7 +315,8 @@
         overflow-x: hidden;
         overflow-y: auto;
 
-        > header {}
+        > header {
+        }
 
         > .content {
             display: flex;
@@ -310,14 +326,14 @@
             gap: 1rem;
 
             > h1 {
-                font-family: 'CHEDROS', sans-serif;
+                font-family: "CHEDROS", sans-serif;
                 font-size: 4rem;
                 color: $white;
                 text-align: center;
             }
 
             > .subTtile {
-                font-family: 'Montserrat', sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-size: 1.2rem;
                 color: $white;
                 text-align: center;
@@ -338,7 +354,6 @@
 
                 @include customScrollbarHorizontal;
 
-
                 .eggResult {
                     width: 250px;
                     min-width: 250px;
@@ -355,7 +370,7 @@
                     }
 
                     > .title {
-                        font-family: 'Montserrat', sans-serif;
+                        font-family: "Montserrat", sans-serif;
                         font-size: 0.8rem;
                         font-weight: bold;
                         color: #fafafa;
