--- a/src/pages/hatching/HatchingInventory.module.scss
+++ b/src/pages/hatching/HatchingInventory.module.scss
@@ -66,6 +66,15 @@
         min-height: 600px;
         max-height: 60vh;
 
+        > .centeredInfo {
+            text-align: center;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
         &::after {
             content: "";
             pointer-events: none;
