--- a/src/pages/hatching/HatchingInventory.module.scss
+++ b/src/pages/hatching/HatchingInventory.module.scss
@@ -119,6 +119,7 @@
 
                 > img {
                     max-width: 100%;
+                    border-radius: 12px;
                 }
             }
 
