ADD loading to HatchResult

--- a/src/pages/hatching/HatchResult/HatchResult.module.scss
+++ b/src/pages/hatching/HatchResult/HatchResult.module.scss
@@ -36,7 +36,9 @@
     overflow-x: hidden;
     overflow-y: auto;
 
-    > header {
+    .loaderIcon,
+    .loaderText {
+        color: white;
     }
 
     > .content {
