--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -174,12 +174,12 @@
             .connectWallet {
                 padding-left: 80px;
                 padding-right: 80px;
-                
+
                 &.danger {
                     background-color: #c23737;
 
                     &:hover {
-                        background-color: #611b1b;                        
+                        background-color: #611b1b;
                     }
                 }
             }
@@ -1025,11 +1025,6 @@
                     transform: rotate(315deg);
                     z-index: 3;
                 }
-
-                video {
-                    border-radius: 20px;
-                    overflow: hidden;
-                }
             }
 
             > .globalPoint {
@@ -1753,13 +1748,11 @@
             flex-direction: column;
             gap: 30px;
             max-width: 900px;
-            margin: auto;            
+            margin: auto;
 
             #public-sale-details {
-            
-                .public-sale-details_answer {  
-                    padding-right: 25px !important;                    
-                    
+                .public-sale-details_answer {
+                    padding-right: 25px !important;
 
                     display: grid;
                     grid-template-columns: 1fr 1fr;
@@ -1767,25 +1760,29 @@
                     gap: 30px 30px;
                     grid-auto-flow: row;
                     grid-template-areas: "details discount";
-                
-                    .details { grid-area: details; }
-                    .discount { grid-area: discount; }
+
+                    .details {
+                        grid-area: details;
+                    }
+                    .discount {
+                        grid-area: discount;
+                    }
 
                     img {
                         border-radius: 33px;
                         object-fit: cover;
                         width: 100%;
-                        max-height: 100%;                        
+                        max-height: 100%;
                     }
 
                     @media (max-width: 850px) {
                         & {
                             grid-template-columns: 1fr;
-                            grid-template-rows: 1fr  1fr;
+                            grid-template-rows: 1fr 1fr;
 
-                            grid-template-areas: 
-                            "details"
-                            "discount"; 
+                            grid-template-areas:
+                                "details"
+                                "discount";
                         }
                     }
                 }
@@ -1834,14 +1831,13 @@
     }
 }
 
-@media (max-width: 900px){
+@media (max-width: 900px) {
     #home {
         #scrollDown {
             display: none;
         }
     }
 }
-
 
 @media (max-width: 1090px) {
     #home {
