FIX loading icon in inventory wasn't centered

--- a/src/pages/hatching/HatchingInventory.module.scss
+++ b/src/pages/hatching/HatchingInventory.module.scss
@@ -67,6 +67,7 @@
         max-height: 60vh;
 
         > .centeredInfo {
+            display: block;
             text-align: center;
             margin: 0;
             position: absolute;
