--- a/src/pages/hatching/HatchingHome/hatchingHome.scss
+++ b/src/pages/hatching/HatchingHome/hatchingHome.scss
@@ -76,7 +76,7 @@
         justify-content: flex-start;
         min-height: calc(100vh - 130px);
         padding-top: 1vh;
-        margin-bottom: 200px;
+        margin-bottom: 0px;
 
         > .reveal {
             display: flex;
@@ -132,7 +132,29 @@
         }
     }
 
+    #claim-privileges {
+        margin-bottom: 100px;
+        padding: 0;
+
+        > h2 {
+            font-family: "CHEDROS", sans-serif;
+            font-size: 3rem;
+            font-weight: bold;
+            color: $white;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        #join-discord-alert {
+            // margin: 0 calc(15px + 53.5px);
+            background-color: $white;
+            border-radius: 30px;
+            padding: 20px;
+        }
+    }
+
     #penguinNest {
+        margin-top: 50px;
         margin-bottom: 100px;
         padding: 0 15px;
 
