FIX inventory cannot be scrolled in safari

--- a/src/pages/hatching/HatchingInventory.module.scss
+++ b/src/pages/hatching/HatchingInventory.module.scss
@@ -102,7 +102,8 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-gap: 10px;
-            overflow: auto;
+            overflow-x: auto;
+            overflow-y: scroll;
             max-height: calc(100% - 2rem - 20px);
 
             > div {
